--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "openai": "^4.82.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
